--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  http: ^1.2.0
+  logger: ^2.5.0
+  riverpod: ^2.6.1
 
 dev_dependencies:
   flutter_test:
