--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   http: ^1.2.0
   logger: ^2.5.0
   flutter_riverpod: ^2.6.1
+  carousel_slider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
